--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,3 +10,17 @@ header {
   grid-column: 1 / span 12;
 }
 
+nav {
+  grid-row: 2;
+  grid-column: 1 / span 3;
+}
+
+main {
+  grid-row: 2;
+  grid-column: 4 / span 6;
+}
+
+aside {
+  grid-row: 2;
+  grid-column: 10 / span 3;
+}
